(rule
 (target dune_inc.ml)
 (action
  (with-stdout-to
   %{target}
   (echo
    "module M = My_dune.Build (DkmlDuneDslShow.I) \n let () = print_string @@ DkmlDuneDslShow.plain_hum M.res \n"))))

(executable
 (name dune_inc)
 (modules dune_inc my_dune)
 (libraries dkml-dune-dsl-show))

(rule
 (alias gendune)
 (action
  (progn
   (with-stdout-to
    dune.gen.inc
    (setenv
     OCAMLRUNPARAM
     b
     (run ./dune_inc.exe %{dep:dune-parameters.json})))
   (diff? dune.inc dune.gen.inc))))

(include dune.inc)

; ------ TESTS -----

(rule
 (alias runtest)
 (action
  (progn
   (run ../test-support/assert_file_contains.exe %{dep:common.txt} "ageless")
   (run ../test-support/assert_file_contains.exe %{dep:batman.txt} 39)
   (run ../test-support/assert_file_contains.exe %{dep:robin.txt} 24))))
